@@ -1,3 +1,7 @@
+2007-08-30  Badlop  <badlop@ono.com>
+
+	* src/mod_webpresence.erl: Preliminary code for JavaScript output.
+
 2007-08-29  Badlop  <badlop@ono.com>
 
 	* src/mod_webpresence.erl: Set jsf-jabber-text as default icon theme in the registration form. Fixed bug in data forms (thanks to NoAlWin).
